--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "driver/stm32f769i"]
 	path = driver/stm32f769i
 	url = https://github.com/C-Architecture/brown_repository.git
+[submodule "driver/f28335"]
+	path = driver/f28335
+	url = https://github.com/C-Architecture/kuku_repository.git
